resources/dsaas-stg/dsaas-preview/jenkins-proxy-api.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    service: jenkins-proxy
  name: jenkins-proxy-api
spec:
  host: jenkins.api.prod-preview.openshift.io
  port:
    targetPort: 9092-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: jenkins-proxy
    weight: 100
  wildcardPolicy: None
